<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autocar2_navigation2</name>
  <version>2.1.4</version>
  <description>
    ROS 2 launch scripts for navigation2
  </description> 
  <maintainer email="jonwon2009@tukorea.ac.kr">Won Jong Wan</maintainer>
  <license>Apache 2.0</license>
  <author email="jonwon2009@tukorea.ac.kr">Won Jong Wan</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
